Previous commit did not fixed wrap issue in history component, but now it is.

--- a/src/app/components/loloof64-chesshistory/loloof64-chesshistory.component.scss
+++ b/src/app/components/loloof64-chesshistory/loloof64-chesshistory.component.scss
@@ -1,11 +1,11 @@
 .history_main {
+    display: flex;
+    flex-wrap: wrap;
     overflow: scroll;
     background-color: beige;
-    word-wrap: break-word;
-    word-break: break-word;
 }
 
 .moveEntry {
-    font-size: larger;
+    font-size: 24px;
     margin: 0 10px;
 }
